set heap and permgen size explicitly for eclipse instance for swtbot ui test